@@ -94,6 +94,7 @@ AC_SUBST(OPENJDK_BUILD_DIR)
 
 IT_CHECK_NUMBER_OF_PARALLEL_JOBS
 IT_CHECK_IF_BOOTSTRAPPING
+IT_CHECK_IF_DOWNLOADING
 IT_CHECK_FOR_JDK
 IT_FIND_JAVA
 IT_FIND_JAVA_COMPILER
